--- a/package.json
+++ b/package.json
@@ -19,63 +19,80 @@
     "@miblanchard/react-native-slider": "^1.5.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "5.11.9",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "5.14.4",
-    "axios": "^0.24.0",
     "base-64": "^1.0.0",
-    "expo": "42.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-barcode-scanner": "12.1.0",
-    "expo-document-picker": "~10.1.3",
-    "expo-image-picker": "10.1.4",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "immer": "^9.0.15",
+    "expo-barcode-scanner": "9.1.0",
     "metro-core": "^0.76.0",
-    "moment": "^2.29.4",
-    "native-base": "3.3.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.63.4",
     "react-native-calendar-list": "^1.0.1",
     "react-native-calendar-picker": "^7.1.3",
-    "react-native-calendars": "^1.1293.0",
     "react-native-currency-input": "^1.0.1",
     "react-native-date-picker": "^4.2.5",
-    "react-native-gesture-handler": "~2.1.0",
     "react-native-image-slider-box": "^2.0.5",
     "react-native-in-app-message": "^1.0.33",
-    "react-native-maps": "0.28.0",
     "react-native-normalize": "^1.0.1",
     "react-native-pager-view": "^6.1.2",
     "react-native-paper": "^5.2.0",
     "react-native-range-datepicker": "^2.2.0",
-    "react-native-safe-area-context": "3.3.2",
     "react-native-scan-barcode": "^3.1.7",
-    "react-native-screens": "~3.4.0",
     "react-native-shadow-2": "^7.0.5",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "12.1.1",
     "react-native-swipe-picker": "^0.1.4",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-timeago": "^0.5.0",
     "react-native-user-avatar": "^1.0.7",
-    "react-native-web": "0.17.1",
     "react-native-webview": "^11.26.1",
-    "react-navigation": "3.0.0",
     "react-navigation-drawer": "^2.7.2",
     "react-navigation-material-bottom-tabs": "^2.3.5",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
     "rn-range-slider": "^2.2.2",
     "socket.io-client": "^4.6.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "unimodules-barcode-scanner-interface": "^6.1.0",
+    "unimodules-image-loader-interface": "^6.1.0",
+    "unimodules-permissions-interface": "^6.1.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
+    "expo": "42.0.3",
+    "expo-app-loading": "1.1.2",
+    "expo-asset": "~8.3.3",
+    "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-location": "~12.1.2",
+    "expo-permissions": "~12.1.1",
+    "expo-status-bar": "~1.0.4",
+    "geocoder": "^0.2.3",
+    "immer": "9.0.5",
+    "moment": "^2.29.1",
+    "native-base": "^3.3.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.63.4",
+    "react-native-calendar-strip": "^2.2.1",
+    "react-native-calendars": "^1.1255.0",
+    "react-native-dropdownalert": "^4.5.1",
+    "react-native-geocode": "^0.1.0",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-map-picker": "^0.0.2",
+    "react-native-maps": "0.28.0",
+    "react-native-ratings": "^8.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-tooltips": "^1.0.3",
+    "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.2.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-debounced": "^0.5.0",
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
