--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^1.5.0",
@@ -28,7 +29,6 @@
     "expo": "42.0.3",
     "expo-app-loading": "1.1.2",
     "expo-asset": "~8.3.3",
-    "expo-av": "^13.2.1",
     "expo-barcode-scanner": "9.1.0",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
@@ -40,6 +40,7 @@
     "metro-core": "^0.76.0",
     "moment": "^2.29.1",
     "native-base": "^3.3.0",
+    "patch-package": "^7.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.63.4",
