--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "base-64": "^1.0.0",
     "expo": "42.0.3",
     "expo-app-loading": "1.1.2",
+    "expo-apple-authentication": "3.2.1",
     "expo-asset": "~8.3.3",
     "expo-barcode-scanner": "9.1.0",
     "expo-font": "~9.2.1",
