--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "2.1.0",
     "@miblanchard/react-native-slider": "^1.5.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
@@ -45,6 +46,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.63.4",
+    "react-native-apple-signin": "^0.0.1",
     "react-native-calendar-list": "^1.0.1",
     "react-native-calendar-picker": "^7.1.3",
     "react-native-calendar-strip": "^2.2.1",
@@ -56,6 +58,7 @@
     "react-native-geocoder": "^0.5.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-image-slider-box": "^2.0.5",
     "react-native-in-app-message": "^1.0.33",
     "react-native-map-picker": "^0.0.2",
@@ -95,6 +98,7 @@
     "unimodules-barcode-scanner-interface": "^6.1.0",
     "unimodules-image-loader-interface": "^6.1.0",
     "unimodules-permissions-interface": "^6.1.0",
+    "uuid": "^9.0.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
