--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-google-signin/google-signin": "6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -33,6 +34,7 @@
     "expo-asset": "~8.3.3",
     "expo-barcode-scanner": "9.1.0",
     "expo-font": "~9.2.1",
+    "expo-google-sign-in": "5.0.1",
     "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
     "expo-permissions": "~12.1.1",
